--- a/index.html
+++ b/index.html
@@ -1,18 +1,26 @@
 <!DOCTYPE html>
-
-<html>
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-  <title>my-first-website</title>
-  <LINK href="styles.css" rel="stylesheet" type="text/css">
+	<meta charset="utf-8">
+	<title>My First Page</title>
 </head>
-
 <body>
+	<p>This is my Main Page</p>
+	<p><a href="http://www.google.com">Google</a>
+	<p><a href="http://www.iitm.ac.in"><img src="https://upload.wikimedia.org/wikipedia/en/thumb/6/69/IIT_Madras_Logo.svg/220px-IIT_Madras_Logo.svg.png" alt="IIT Madras" width="30" height="30" /></a></p>
+	<a href="FF.html"> _blank File</a>
+	<hr>>
+	<p>Over the Horizon: ></p>
+	<video src= "https://www.youtube.com/watch?v=doFVaVZrIeg" controls></video>>
+	<table border="1">
+		<th><b>The Chart</b></th>
+		<th><b>The Number</b></th>
+    <tr><td>One</td><td>Two</td></tr>
+    <tr><td>Okay</td><td>Okay</td></tr>
 
-<img src="https://octodex.github.com/images/daftpunktocat-thomas.gif" id="octocat" alt="octocat-gif" />
-
-<!-- Change this code here by copy and pasting your template on line 15 -->
-<p>Welcome to your first GitHub Pages website!</p>
-
+	</table>>
+	<details><summary>All done</summary>></details>>
+	<button>Close</button>>
+	<button>Next</button>>
+    <i class="fab fa-500px"></i>
+	<i class="fab fa-500px-xs"></i>
 </body>
-</html>
